--- a/style.css
+++ b/style.css
@@ -46,15 +46,23 @@ body{
 }
 
 /*user box*/
-.user-box{
-    
+.user-box{  
     display: flex;
     flex-direction: column;
     border-style: solid;
     border-width: 3px;
     justify-content: space-evenly;
-    padding: 8%;
+    padding: 5%;
     margin-left: 5%;
+}
+.user-box h2{
+    display: flex;
+    flex:2;
+}
+.user-box h3{
+    padding-top: 8%;
+    font-weight: normal;
+
 }
 .topbar{
     display: flex;
@@ -65,7 +73,9 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex: 1;
 }
+
 
 
 
